--- a/style.css
+++ b/style.css
@@ -42,6 +42,9 @@
     .my-text::placeholder{
         font-size: 8px;
     }
+    #check-input::placeholder{
+        font-size: 10px;
+    }
 }
 @media screen and (max-width: 300px) {
     .my-text{
@@ -50,6 +53,9 @@
     
     .btn{
         /* width: 100px; */
+        font-size: 8px;
+    }  
+      #check-input::placeholder{
         font-size: 8px;
     }
 }
